--- a/index.html
+++ b/index.html
@@ -1,9 +1,18 @@
 <html>
     <head>
         <meta charset="utf-8"/>
-        <title> Hello World</title>
+        <title> J'ai kill</title>
     </head>
     <body>
-        <h1> Hello World</h1>
+       <header>
+            <h1> J'ai kill pour les nuls</h1>
+            <p> Site d'entrainement à l'utilisation de Jekyll et de Git</p>
+       </header>
+       <main>
+            <h2>Ma page</h2>
+       </main>
+       <footer>
+            <p> weshloray@gmail.com</p>
+       </footer>
     </body>
 </html>
