--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ title : ma page
             </h1>
         </div>
         {% for post in paginator.posts %}
-            {{ post.content }}
+            {{ post }}
         {% endfor %}
     </div>
 </div>
