--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@ title : ma page
 
 <!-- Page Content -->
 <div class="container">
-
-        <!-- Marketing Icons Section -->
     <div class="row">
         <div class="col-lg-12">
             <h1 class="page-header">
@@ -14,7 +12,17 @@ title : ma page
             </h1>
         </div>
         {% for post in paginator.posts %}
-            {{ post }}
+            <div class="col-md-4">
+                <div class="panel panel-default">
+                   <div class="panel-heading">
+                       <h4><i class="fa fa-fw fa-check"></i>{{ post.title }}</h4>
+                   </div>
+                   <div class="panel-body">
+                     <p>{{ post.content }}</p>
+                     <a href="#" class="btn btn-default">Learn More</a>
+                   </div>
+                </div>
+            </div>
         {% endfor %}
     </div>
 </div>
