--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 layout : default
 title : ma page
 ---
-
+{% include slider.html %}
 <!-- Page Content -->
 <div class="container">
     <div class="row">
         <div class="col-lg-12">
             <h1 class="page-header">
-                 Entrainement Jekyl
+                 BIENVENUE SUR MON PORTFOLIO EN LIGNE
             </h1>
         </div>
         {% for post in paginator.posts %}
