--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ title : ma page
             {% for post in paginator.posts %}
             <div class="col-md-4 col-sm-6">
                 <a href="portfolio-item.html">
-                    <img class="img-responsive img-portfolio img-hover" src="{{ post.image }}" alt="">
+                    {{ post.image }}
                 </a>
             </div>
             {% endfor %}
