--- a/index.html
+++ b/index.html
@@ -30,15 +30,20 @@ title : ma page
             <div class="col-lg-12">
                 <h2 class="page-header">Mon Portfolio</h2>
             </div>
-            {% for post in paginator.posts %}
+            
             <div class="col-md-4 col-sm-6">
-                <a href="portfolio-item.html">
-                   {{ post.excerpt }}
-                   {% assign image = page.images[0] %}
-                   {% include image.html image=image %}
-                </a>
+                <img alt="pizza" src="images/Folio_pizza.jpg"/>
             </div>
-            {% endfor %}
+            <div class="col-md-4 col-sm-6">
+                <img alt="cv" src="images/Folio_cv.jpg"/>
+            </div>
+            <div class="col-md-4 col-sm-6">
+                <img alt="bomba" src="images/Folio_bomba.jpg"/>
+            </div>
+            <div class="col-md-4 col-sm-6">
+                <img alt="cocci" src="images/Folio_cocci.jpg"/>
+            </div>
+           
         </div>
     </div>
 </div>
