--- a/index.html
+++ b/index.html
@@ -43,7 +43,19 @@ title : ma page
         <div class="col-md-4 col-sm-6">
             <img class="img-responsive img-portfolio img-hover" alt="cocci" src="images/Folio_cocci.jpg"/>
         </div>
-           
+        <div class="col-md-4 col-sm-6">
+            <img class="img-responsive img-portfolio img-hover" alt="apertura" src="images/Folio_apertura.jpg"/>
         </div>
+        <div class="col-md-4 col-sm-6">
+            <img class="img-responsive img-portfolio img-hover" alt="pac" src="images/Folio_pac.jpg"/>
+        </div>
+        <div class="col-md-4 col-sm-6">
+            <img class="img-responsive img-portfolio img-hover" alt="3d" src="images/Folio_3d1.jpg"/>
+        </div>
+        <div class="col-md-4 col-sm-6">
+            <img class="img-responsive img-portfolio img-hover" alt="3d2" src="images/Folio_3d2.jpg"/>
+        </div>
+           
     </div>
 </div>
+
